tests/fail/func_corecursion.crema
def int foo() {
    return bar()
}

def int bar() {
    return foo()
}